--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,10 @@ jobs:
           node-version: 18
           cache: yarn
 
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
       - name: Build website
-        working-directory: demo
-        run: |
-          yarn install --frozen-lockfile
-          yarn build
+        run: yarn build
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
