--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,18 +1,26 @@
 name: setup_env_var
 ## Triggers the workflow on when there is a push, or 
 ## pull request on the main branch
-on: [pull_request, push] 
+on: [pull_request, push]
+
+env:
+## Environment variable for step 1
+ API_KEY: jhldh383bjHOW890QBCJ28  
+ STAKING_API_KEY: jhdh28oobkjwho2o229nmJ0s
 
 jobs:
-  setup env:
-    ## The type of runner that the job will run on
+  job1:
+    ## The type of runner that the job will run on, 
+    ## here it runs on ubuntu latest
     runs-on: ubuntu-latest 
     steps:
-      - name: Setup credentials
-        env:
-          ## Environment variable for step 1
-          API_KEY: jhldh383bjHOW890QBCJ28  
-          STAKING_API_KEY: jhdh28oobkjwho2o229nmJ0s
+      - name: Node API KEY
         ## Reference your environment variables
-        run: echo "The API Key is:${{env.API_KEY}}"   
-        run: echo "The Staking API Key is:${{STAKING_API_KEY}}"
+        run: echo "The API key is:${{env.API_KEY}}"   
+
+  job2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Staking API Key
+        ## Another way reference your environment variables
+        run: echo "The API key is:${{env.STAKING_API_KEY}}"
