--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,8 @@ jobs:
           node-version: 18
           cache: npm
 
+      - name: Create Branch
+        run: git branch development
       - name: Install dependencies
         run: npm ci
       - name: Build website
