--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,18 @@ jobs:
           node-version: 18
           cache: npm
 
-      - name: Create Branch
-        run: git branch development
       - name: Install dependencies
         run: npm ci
       - name: Build website
         run: npm run build
+
+      - name: Create Branch
+        uses: peterjgrainger/action-create-branch@v2.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          branch: 'development'
+          sha: '${{ github.event.pull_request.head.sha }}'
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
