--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
     name: Update developmet branch
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
     - uses: Embraser01/update-git-branch-action@v1.0.0
       if: github.ref == 'refs/heads/master'
       with:
